# NeuralRust

./: Cargo.toml  README.md  gyatt.json  log.json  shell.nix
NeuralUI/: Cargo.toml  build.rs
NeuralUI/qml/: main.qml
NeuralUI/src/: main.rs
activations/: Cargo.toml
main/: Cargo.toml
main/src/: graph.rs  main.rs
matrix/: Cargo.toml
matrix/src/: lib.rs
network/: Cargo.toml
network/src/: lib.rs
src/: main.rs
src/lib/: activations.rs  matrix.rs  mod.rs  network.rs
