[workspace]
members = ["NeuralUI",
  "activations",
  "main",
  "matrix",
  "network",
]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
rand = "0.9.2"
cxx = "1.0.83"
cxx-qt = "0.7.2"
cxx-qt-lib = "0.7.2"
cxx-qt-build = "0.7.2"
activations = { path = "activations" }
matrix = { path = "matrix" }
network = { path = "network" }
