[workspace]
members = [
  "activations",
  "main",
  "matrix",
  "network",
]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
rand = "0.9.2"
egui = "0.32.2"
egui_plot = "0.33.0"
eframe = "0.32.2"
activations = { path = "activations" }
matrix = { path = "matrix" }
network = { path = "network" }
