[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = { workspace = true }
egui_graphs = { workspace = true }
petgraph = { workspace = true }
eframe = { workspace = true, features = ["default"] }
network = { workspace = true }
matrix = { workspace = true }
activations = { workspace = true }
